--- a/src/recipes.module.css
+++ b/src/recipes.module.css
@@ -5,14 +5,18 @@ margin: 20px;
 display: flex;
 flex-direction: column;
 justify-content: space-around;
-background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
 align-items: center;
 min-width: 40px;
 color: white;
 }
 
+.recipe_title {
+    color:rgb(146, 24, 85);
+}
+
 .image {
     border-radius: 50px;
-    width: 200px;
+    width: 300px;
     height: 300px;
 }
