--- a/src/recipes.module.css
+++ b/src/recipes.module.css
@@ -9,6 +9,7 @@ background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47
 align-items: center;
 min-width: 40px;
 color: white;
+/* font-family:"unprecedented Times"; */
 }
 
 .recipe_title {
